`ContentManagerWatcher.watchContentManager` is not required anymore
GitOrigin-RevId: 88cf741547f17411da3cf3186b83904a7cd0b74d