@@ -6,7 +6,6 @@ import com.intellij.execution.runners.ExecutionUtil;
 import com.intellij.execution.ui.BaseContentCloseListener;
 import com.intellij.execution.ui.RunContentManagerImpl;
 import com.intellij.icons.AllIcons;
-import com.intellij.ide.impl.ContentManagerWatcher;
 import com.intellij.ide.startup.StartupManagerEx;
 import com.intellij.lang.LangBundle;
 import com.intellij.openapi.Disposable;
@@ -24,8 +23,6 @@ import com.intellij.openapi.wm.ToolWindowManager;
 import com.intellij.ui.UIBundle;
 import com.intellij.ui.content.Content;
 import com.intellij.ui.content.ContentManager;
-import com.intellij.ui.content.TabbedContent;
-import com.intellij.util.ContentUtilEx;
 import com.intellij.util.ModalityUiUtil;
 import com.intellij.util.containers.MultiMap;
 import kotlin.Unit;
@@ -34,33 +31,32 @@ import org.jetbrains.annotations.Nullable;
 
 import javax.swing.*;
 import java.awt.*;
+import java.util.HashMap;
 import java.util.List;
-import java.util.*;
+import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Supplier;
-
-import static com.intellij.util.ContentUtilEx.getFullName;
 
 /**
  * @author Vladislav.Soroka
  */
 public final class BuildContentManagerImpl implements BuildContentManager, Disposable {
-  public static final Supplier<@NlsContexts.TabTitle String> Build_Tab_Title_Supplier = LangBundle.messagePointer("tab.title.build");
+  public static final Supplier<@NlsContexts.TabTitle String> BUILD_TAB_TITLE_SUPPLIER = LangBundle.messagePointer("tab.title.build");
 
-  private static final List<Supplier<@NlsContexts.TabTitle String>> ourPresetOrder = Arrays.asList(
+  private static final List<Supplier<@NlsContexts.TabTitle String>> presetOrder = List.of(
     LangBundle.messagePointer("tab.title.sync"),
-    Build_Tab_Title_Supplier,
+    BUILD_TAB_TITLE_SUPPLIER,
     LangBundle.messagePointer("tab.title.run"),
     LangBundle.messagePointer("tab.title.debug")
   );
   private static final Key<Map<Object, CloseListener>> CONTENT_CLOSE_LISTENERS = Key.create("CONTENT_CLOSE_LISTENERS");
 
-  private final Project myProject;
+  private final Project project;
   private final Map<Content, Pair<Icon, AtomicInteger>> liveContentsMap = new ConcurrentHashMap<>();
 
   public BuildContentManagerImpl(@NotNull Project project) {
-    myProject = project;
+    this.project = project;
   }
 
   @Override
@@ -69,7 +65,7 @@ public final class BuildContentManagerImpl implements BuildContentManager, Dispo
 
   @Override
   public @NotNull ToolWindow getOrCreateToolWindow() {
-    ToolWindowManager toolWindowManager = ToolWindowManager.getInstance(myProject);
+    ToolWindowManager toolWindowManager = ToolWindowManager.getInstance(project);
     ToolWindow toolWindow = toolWindowManager.getToolWindow(TOOL_WINDOW_ID);
     if (toolWindow != null) {
       return toolWindow;
@@ -78,40 +74,38 @@ public final class BuildContentManagerImpl implements BuildContentManager, Dispo
     toolWindow = toolWindowManager.registerToolWindow(RegisterToolWindowTask.build(TOOL_WINDOW_ID, builder -> {
       builder.stripeTitle = UIBundle.messagePointer("tool.window.name.build");
       builder.icon = AllIcons.Toolwindows.ToolWindowBuild;
-      // content is not added yet
-      builder.shouldBeAvailable = false;
       return Unit.INSTANCE;
     }));
-    ContentManager contentManager = toolWindow.getContentManager();
-    ContentManagerWatcher.watchContentManager(toolWindow, contentManager);
+    toolWindow.setToHideOnEmptyContent(true);
     return toolWindow;
   }
 
   private void invokeLaterIfNeeded(@NotNull Runnable runnable) {
-    if (myProject.isDefault()) {
+    if (project.isDefault()) {
       return;
     }
-    StartupManagerEx.getInstanceEx(myProject).runAfterOpened(() -> {
-      ModalityUiUtil.invokeLaterIfNeeded(ModalityState.defaultModalityState(), myProject.getDisposed(), runnable);
+
+    StartupManagerEx.getInstanceEx(project).runAfterOpened(() -> {
+      ModalityUiUtil.invokeLaterIfNeeded(ModalityState.defaultModalityState(), project.getDisposed(), runnable);
     });
   }
 
   @Override
-  public void addContent(Content content) {
+  public void addContent(@NotNull Content content) {
     invokeLaterIfNeeded(() -> {
       ContentManager contentManager = getOrCreateToolWindow().getContentManager();
-      final String name = content.getTabName();
-      final String category = Strings.trimEnd(StringUtil.split(name, " ").get(0), ':');
-      int idx = -1;
-      for (int i = 0; i < ourPresetOrder.size(); i++) {
-        final String s = ourPresetOrder.get(i).get();
+      String name = content.getTabName();
+      String category = Strings.trimEnd(StringUtil.split(name, " ").get(0), ':');
+      int index = -1;
+      for (int i = 0; i < presetOrder.size(); i++) {
+        String s = presetOrder.get(i).get();
         if (s.equals(category)) {
-          idx = i;
+          index = i;
           break;
         }
       }
-      final Content[] existingContents = contentManager.getContents();
-      if (idx != -1) {
+      Content[] existingContents = contentManager.getContents();
+      if (index != -1) {
         MultiMap<String, String> existingCategoriesNames = new MultiMap<>();
         for (Content existingContent : existingContents) {
           String tabName = existingContent.getTabName();
@@ -119,10 +113,9 @@ public final class BuildContentManagerImpl implements BuildContentManager, Dispo
         }
 
         int place = 0;
-        for (int i = 0; i <= idx; i++) {
-          String key = ourPresetOrder.get(i).get();
-          Collection<String> tabNames = existingCategoriesNames.get(key);
-          place += tabNames.size();
+        for (int i = 0; i <= index; i++) {
+          String key = presetOrder.get(i).get();
+          place += existingCategoriesNames.get(key).size();
         }
         contentManager.addContent(content, place);
       }
@@ -133,8 +126,7 @@ public final class BuildContentManagerImpl implements BuildContentManager, Dispo
       for (Content existingContent : existingContents) {
         existingContent.setDisplayName(existingContent.getTabName());
       }
-      String tabName = content.getTabName();
-      updateTabDisplayName(content, tabName);
+      updateTabDisplayName(content, content.getTabName());
     });
   }
 
@@ -151,9 +143,9 @@ public final class BuildContentManagerImpl implements BuildContentManager, Dispo
   @Override
   public void removeContent(Content content) {
     invokeLaterIfNeeded(() -> {
-      ToolWindow toolWindow = ToolWindowManager.getInstance(myProject).getToolWindow(TOOL_WINDOW_ID);
+      ToolWindow toolWindow = ToolWindowManager.getInstance(project).getToolWindow(TOOL_WINDOW_ID);
       ContentManager contentManager = toolWindow == null ? null : toolWindow.getContentManager();
-      if (contentManager != null && (!contentManager.isDisposed())) {
+      if (contentManager != null && !contentManager.isDisposed()) {
         contentManager.removeContent(content, true);
       }
     });
@@ -177,25 +169,6 @@ public final class BuildContentManagerImpl implements BuildContentManager, Dispo
     });
   }
 
-  @Override
-  public Content addTabbedContent(@NotNull JComponent contentComponent,
-                                  @NotNull @NlsContexts.TabTitle String groupPrefix,
-                                  @NotNull String tabName,
-                                  @Nullable Icon icon,
-                                  @Nullable Disposable childDisposable) {
-    ContentManager contentManager = getOrCreateToolWindow().getContentManager();
-    ContentUtilEx.addTabbedContent(contentManager, contentComponent, groupPrefix, tabName, false, childDisposable);
-    Content content = contentManager.findContent(getFullName(groupPrefix, tabName));
-    if (icon != null) {
-      TabbedContent tabbedContent = ContentUtilEx.findTabbedContent(contentManager, groupPrefix);
-      if (tabbedContent != null) {
-        tabbedContent.putUserData(ToolWindow.SHOW_CONTENT_ICON, Boolean.TRUE);
-        tabbedContent.setIcon(icon);
-      }
-    }
-    return content;
-  }
-
   public void startBuildNotified(@NotNull BuildDescriptor buildDescriptor,
                                  @NotNull Content content,
                                  @Nullable BuildProcessHandler processHandler) {
@@ -205,9 +178,9 @@ public final class BuildContentManagerImpl implements BuildContentManager, Dispo
         closeListenerMap = new HashMap<>();
         content.putUserData(CONTENT_CLOSE_LISTENERS, closeListenerMap);
       }
-      closeListenerMap.put(buildDescriptor.getId(), new CloseListener(content, processHandler));
+      closeListenerMap.put(buildDescriptor.getId(), new CloseListener(this, content, processHandler));
     }
-    Pair<Icon, AtomicInteger> pair = liveContentsMap.computeIfAbsent(content, c -> Pair.pair(c.getIcon(), new AtomicInteger(0)));
+    Pair<Icon, AtomicInteger> pair = liveContentsMap.computeIfAbsent(content, c -> new Pair<>(c.getIcon(), new AtomicInteger(0)));
     pair.second.incrementAndGet();
     content.putUserData(ToolWindow.SHOW_CONTENT_ICON, Boolean.TRUE);
     if (pair.first == null) {
@@ -251,11 +224,12 @@ public final class BuildContentManagerImpl implements BuildContentManager, Dispo
     });
   }
 
-  private final class CloseListener extends BaseContentCloseListener {
+  private static final class CloseListener extends BaseContentCloseListener {
     private @Nullable BuildProcessHandler myProcessHandler;
 
-    private CloseListener(final @NotNull Content content, @NotNull BuildProcessHandler processHandler) {
-      super(content, myProject, BuildContentManagerImpl.this);
+    private CloseListener(@NotNull BuildContentManagerImpl buildContentManager, @NotNull Content content, @NotNull BuildProcessHandler processHandler) {
+      super(content, buildContentManager.project, buildContentManager);
+
       myProcessHandler = processHandler;
     }
 
@@ -272,6 +246,7 @@ public final class BuildContentManagerImpl implements BuildContentManager, Dispo
       if (myProcessHandler == null || myProcessHandler.isProcessTerminated() || myProcessHandler.isProcessTerminating()) {
         return true;
       }
+
       myProcessHandler.putUserData(RunContentManagerImpl.ALWAYS_USE_DEFAULT_STOPPING_BEHAVIOUR_KEY, Boolean.TRUE);
       final String sessionName = myProcessHandler.getExecutionName();
       final WaitForProcessTask task = new WaitForProcessTask(myProcessHandler, sessionName, modal, myProject) {
